--- a/Preprocessing/Annotation.Rmd
+++ b/Preprocessing/Annotation.Rmd
@@ -1,11 +1,13 @@
 ---
 title: "Annotation"
 author: "Mikhail Dozmorov"
+date: '`r Sys.Date()`'
 output:
+  pdf_document:
+    toc: yes
   html_document:
-    toc: true
     theme: united
-date: "`r Sys.Date()`"
+    toc: yes
 ---
 
 Material is public domain
