--- a/Preprocessing/Filtering.Rmd
+++ b/Preprocessing/Filtering.Rmd
@@ -1,11 +1,13 @@
 ---
 title: "Filtering"
 author: "Mikhail Dozmorov"
+date: '`r Sys.Date()`'
 output:
+  pdf_document:
+    toc: yes
   html_document:
-    toc: true
     theme: united
-date: "`r Sys.Date()`"
+    toc: yes
 ---
 
 Material is public domain
@@ -21,7 +23,7 @@ set.seed(1)
 
 ### genefilter & collapseRows - removing genes with certain properties before DE analysis
 
-Filtering any unimportant genes before DE analysis is quite desirable because it increases the statistical power of your differential expression analysis. In other words, a smaller gene set suffers less of a hit from multiple testing correction.
+Filtering any unimportant genes before differential expression (DE) analysis is quite desirable because it increases the statistical power of your differential expression analysis. In other words, a smaller gene set suffers less of a hit from multiple testing correction.
 
 Another potential use for filtering is reducing the feature space for prediction analysis. This will cause models to be trained faster and probably to have less variance.
 
@@ -33,13 +35,13 @@ library(genefilter)
 data(ALL)
 ```
 
-Looks like log2-transformed, not quantile normalized
+Looks like log2-transformed, not normalized
 
 ```{r}
 summary(exprs(ALL)[,1:3])
 ```
 
-kOverA filters out probes which do not have at least "k" experiments in which they are over expression level "A". The idea here is that  the variability of low-expressed genes is harder to distinguish from the baseline noise level.
+`kOverA` filters out probes which do not have at least "k" experiments in which they are over expression level "A". The idea here is that  the variability of low-expressed genes is harder to distinguish from the baseline noise level.
 
 ```{r}
 ka.filter <- filterfun(kOverA(5, 4.0))
@@ -68,7 +70,7 @@ Lots of other filters exist. For example, you can  filter by Anova or T-tests wi
 ls("package:genefilter")
 ```
 
-collapseRows from the WGCNA package serves a similar purpose. It takes an expression matrix, a vector of probe IDs, and a vector of corresponding category IDs (usually Entrez Gene or Ensembl IDs) and collapses all the probes mapping to a given gene into one row.
+`collapseRows` from the WGCNA package serves a similar purpose. It takes an expression matrix, a vector of probe IDs, and a vector of corresponding category IDs (usually Entrez Gene or Ensembl IDs) and collapses all the probes mapping to a given gene into one row.
 
 It has many possible methods for collapsing the rows (in fact, an entire [paper](http://www.biomedcentral.com/1471-2105/12/322) was written just about this one function. By default, rows are collapsed by max mean. 
 
